@@ -326,7 +326,9 @@ void apply_preferences (s_preferences prefs)
     menu_item = GTK_WIDGET(gtk_builder_get_object (main_window_xml, "show_menubar1"));
 	gtk_check_menu_item_set_active (GTK_CHECK_MENU_ITEM(menu_item), prefs.show_menu);
 	/* If set_active does not toggle the current setting, than no callback gets
-	 * called and the menu bar might be in a wrong state.
+	 * called and the menu bar might be in a wrong state. While 
+	 * gtk_check_menu_item_set_active simply sets the item, 
+	 * gtk_check_menu_item_toggled emits the signal that triggers the callback.
 	 */
 	gtk_check_menu_item_toggled (GTK_CHECK_MENU_ITEM(menu_item));
 
@@ -344,6 +346,7 @@ void apply_preferences (s_preferences prefs)
 		error_message ("Unknown mode %i in \"apply_preferences\"", prefs.mode);
 	}
 	gtk_check_menu_item_set_active(GTK_CHECK_MENU_ITEM(menu_item), TRUE);
+	gtk_check_menu_item_toggled (GTK_CHECK_MENU_ITEM(menu_item));
 
 	/* view specific */
 /*	display_update_tags ();
